--- a/pages/base64-hex.html
+++ b/pages/base64-hex.html
@@ -12,7 +12,8 @@
         <a href="../pages/hash.html">Hash</a>
     </div>
     <div class="main">
-        <div class="box">
+        <h2><a href="../index.html" style="text-decoration: none; color: #000;">Base64 - Hex</h2>
+            <div class="box">
             <div class="box-title">Base64</div>
             <textarea id="base64-input" placeholder="Enter Base64 string..."></textarea>
         </div>
