--- a/pages/hash.html
+++ b/pages/hash.html
@@ -12,6 +12,7 @@
         <a href="../pages/hash.html">Hash</a>
     </div>
     <div class="main">
+        <h2><a href="../index.html" style="text-decoration: none; color: #000;">Hash</h2>
         <div class="box">
             <div class="box-title">Algorithm</div>
             <select id="hash-algorithm">
